--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,12 +73,6 @@ p {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
 }
 
 .benefits {
@@ -103,6 +97,15 @@ p {
     display: block;
     margin: 10px auto;
     max-width: 150px;
+}
+
+.content-row {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #0072bb;
+    color: #ffffff;
 }
 
 .content img {
